add update and timestamps