@@ -2,22 +2,16 @@ package test;
 
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.parser.DataFormatException;
-import ca.uhn.fhir.parser.IParser;
-import ca.uhn.fhir.rest.api.MethodOutcome;
-import ca.uhn.fhir.rest.client.api.IGenericClient;
-import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import io.github.linuxforhealth.hl7.HL7ToFHIRConverter;
-
-import org.hl7.fhir.instance.model.api.IIdType;
 import org.hl7.fhir.r4.model.Immunization;
 import org.hl7.fhir.r4.model.Patient;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class TestApplication {
    private static final FhirContext ctx = CustomClientBuilder.getCTX();
+
    /**
     * This is the Java main method, which gets executed
     */
@@ -30,31 +24,36 @@ public class TestApplication {
       Immunization immunization;
       String response;
       try {
-         patient = ctx.newXmlParser().parseResource(Patient.class,  Files.readString( Path.of("src/main/resources/samples/Patient/" + fileNamePatient)));
-         immunization = ctx.newXmlParser().parseResource(Immunization.class,  Files.readString( Path.of("src/main/resources/samples/Immunization/" + fileNameImmunization)));
-         
-         ResourceClient.write(patient);
+         patient = ctx.newXmlParser().parseResource(Patient.class,
+               new String(
+                  Files.readAllBytes(Paths.get("src/main/resources/samples/Patient/" + fileNamePatient))));
+         immunization = ctx.newXmlParser().parseResource(Immunization.class,
+               new String(
+                     Files.readAllBytes(Paths.get("src/main/resources/samples/Immunization/" + fileNameImmunization))));
 
-         response = ResourceClient.read("Patient", patient.getId());
-         // System.err.println(response);
+         String id = patient.getIdentifier().get(0).getValue();
+
+         response = ResourceClient.write(patient);
+         System.err.println(response);
+         response = ResourceClient.read("Patient", id);
+         System.err.println(response);
 
          ResourceClient.write(immunization);
 
          response = ResourceClient.read("Immunization", immunization.getId());
-         // System.err.println(response);
+         System.err.println(response);
 
-         ResourceClient.delete("Immunization", patient.getId());
+         ResourceClient.delete("Immunization", id);
 
-         ResourceClient.delete("Patient", patient.getId());
-         
-         // response = ResourceClient.read("Patient", patient.getId());
-         // System.err.println(response);
+         response = ResourceClient.delete("Patient", id);
+
+         // response = ResourceClient.read("Patient", id);
+         System.err.println(response);
 
       } catch (DataFormatException | IOException e) {
          System.err.println("unreadable file");
          e.printStackTrace();
       }
-      
 
    }
 
